--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
-MODE=dev
-REDIRECT_URI=http://public.widgets-tema.ru
+MODE=prod
+REDIRECT_URI=https://public.widgets-tema.ru
 PORT=8080
+ADMIN_LOGIN=admin
+ADMIN_PASSWORD=1234
